fix #11: support migration from Microsoft BizTalk
Add BizTalk Server as the 4th supported migration source platform.

Graph parser: hybrid BizTalkParser with 4 internal StAX-based parsers
(BizTalkOdxParser, BizTalkBtmParser, BizTalkBtpParser,
BizTalkBindingParser). 10 new NodeType and 7 new EdgeType values.
37 orchestration shape types recognized, 45 functoid type mappings.
UTF-16 binding file detection. Atomic graph mutation via buffering.

Init command: --source-platform biztalk option, BizTalk project
detection in detectProjectType().

Migration skill: 6 new guides (biztalk-phase1, biztalk-phase2,
biztalk-component-mapping, biztalk-map-conversion,
biztalk-expression-mapping, biztalk-pipeline-mapping).
SKILL.md updated with BizTalk vendor detection and guide manifest.
Full shape-to-Camel EIP mapping table (37 entries).

CI: pull-requests:write permission for comment-pr job.

Closes #12